<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_room_black_24dp"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_param" />
        <item android:title="@string/menu_myGardens">
            <menu>
                <item
                    android:id="@+id/nav_garden1"
                    android:icon="@drawable/ic_local_florist_black_24dp"
                    android:title="Potager 1" />
                <item
                    android:id="@+id/nav_garden2"
                    android:icon="@drawable/ic_local_florist_black_24dp"
                    android:title="Potager 2" />
                <item
                    android:id="@+id/nav_add_garden"
                    android:icon="@drawable/ic_add_circle_black_24dp"
                    android:title="@string/add_garden" />
            </menu>
        </item>
    </group>
</menu>
