<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="38dp"
    android:paddingRight="38dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lpdw.urbanproject.SignInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Username"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:id="@+id/sign_in_username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:hint="Password"
            android:id="@+id/sign_in_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:id="@+id/sign_in_button"
            android:text="@string/sign_in"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:id="@+id/sign_in_to_forgotten_password"
            android:text="@string/forgotten_password" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/no_account" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:id="@+id/sign_in_to_sign_up"
            android:text="@string/sign_up" />

    </LinearLayout>
</RelativeLayout>
